assets/css/style.css
    .main-header {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 70px;
        background: rgb(135, 99, 187);
        display: flex;
        justify-content: center;
        align-items: center;
        z-index: 1000;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 20px;
    }

    .nav-bar {
        display: flex;
        gap: 30px;
    }

    .h1 {
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    font-style: normal;
    font-size: 70px;
    margin-top: 80px;
    margin-left: 30px;
    margin-bottom: 15px;
    margin-right: 30px;
    color: rgb(111, 12, 111);
    }

    .h1-stuff {
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    font-style: normal;
    font-size: 20px;
    margin-top: 20px;
    margin-left: 30px;
    margin-bottom: 15px;
    margin-right: 30px;
    color: rgb(111, 12, 111);
    }

    .h2 {
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    font-style: normal;
    font-size: 28px;
    margin-top: 30px;
    margin-left: 30px;
    margin-bottom: 12px;
    margin-right: 20px;
    color: rgb(111, 12, 111);
    }

